# unixgent

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile.test  Makefile  PLAN.md  README.md  SECURITY.md  SUBAGENT_PLAN.md  analyze_rust_complexity.py
crates/ua-backend/: Cargo.toml
crates/ua-backend/src/: anthropic.rs  lib.rs  mock.rs  sse.rs
crates/ua-core/: Cargo.toml
crates/ua-core/src/: agents.rs  attachment.rs  audio.rs  audit.rs  batch.rs  config.rs  context.rs  depth.rs  display.rs  journal.rs  judge.rs  lib.rs  main.rs  osc.rs  policy.rs  process.rs  pty.rs  renderer.rs  repl.rs  shell_scripts.rs  style.rs
crates/ua-core/src/display/: mod.rs  testing.rs
crates/ua-core/tests/: shell_integration.rs
crates/ua-protocol/: Cargo.toml
crates/ua-protocol/src/: context.rs  lib.rs  message.rs
crates/ua-sandbox/: Cargo.toml
crates/ua-sandbox/src/: landlock.rs  lib.rs  policy.rs  seatbelt.rs
crates/ua-sandbox/tests/: sandbox_integration.rs
demo/computer-use-macos/: README.md  cleanup.sh  launch.sh  system-prompt.md
research/: EXTRACTABLE_PATTERNS.md  OPENCLAW_ANALYSIS.md  RESEARCH_REPORT.md  agent_s_analysis.txt  aider_analysis.txt  butterfish_analysis.txt  cua_analysis.txt  goose_analysis.txt  gptme_analysis.txt  macos_use_analysis.txt  open_interpreter_analysis.txt  opencode_analysis.txt  shellgpt_analysis.txt
