[workspace]
resolver = "2"
members = ["crates/ua-core", "crates/ua-backend", "crates/ua-protocol"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ua-protocol = { path = "crates/ua-protocol" }
ua-backend = { path = "crates/ua-backend" }
