[workspace]
resolver = "2"
members = ["crates/ua-core", "crates/ua-backend", "crates/ua-protocol", "crates/ua-sandbox"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
portable-pty = "0.8"
crossterm = "0.28"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
bytes = "1"
async-stream = "0.3"
tempfile = "3"
signal-hook = "0.3"
libc = "0.2"
base64 = "0.22"
ua-protocol = { path = "crates/ua-protocol" }
ua-backend = { path = "crates/ua-backend" }
ua-sandbox = { path = "crates/ua-sandbox" }
