[package]
name = "ua-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ua-protocol.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
bytes.workspace = true
async-stream.workspace = true

[dev-dependencies]
http = "1"
