[package]
name = "ua-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "unixagent"
path = "src/main.rs"

[dependencies]
ua-protocol.workspace = true
ua-backend.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
portable-pty.workspace = true
crossterm.workspace = true
toml.workspace = true
ratatui.workspace = true
tempfile.workspace = true
