[package]
name = "ua-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "unixagent"
path = "src/main.rs"

[dependencies]
ua-protocol.workspace = true
ua-backend.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
portable-pty.workspace = true
crossterm.workspace = true
toml.workspace = true
tempfile.workspace = true
signal-hook.workspace = true
